changed sticky overflow to auto to try to resolve scroll bar issues on desktop

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -131,7 +131,7 @@ input{
 	  padding: 5px 10px 10px 10px;
   background: #ffde4c;
   box-shadow: 2px 2px 5px 0 #333;
-  overflow: scroll;
+  overflow: auto;
 }
 
 .for-shadow{
